# fs

./: .gitignore  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg
fs/: __init__.py
fs/gitfs/: __init__.py  gitfile.py  gitfs.py  objects.py  opener.py
tests/: test_gitfs.py  test_import.py
