[metadata]
name = fs.gitfs
version = file: fs.gitfs/VERSION
author = Andrea Bonomi
author-email = andrea.bonomi@gmail.com
home-page = https://github.com/andreax79/fs.gitfs
description = PythonFilesystem2 Git readonly filesystem
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = filesystem, Pyfilesystem2, git
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: System :: Filesystems
  Topic :: System :: Networking
project_urls =
  Bug Tracker = https://github.com/andreax79/fs.gitfs/issues
  Changelog = https://github.com/andreax79/fs.gitfs/blob/master/CHANGELOG.md
  Coverage = https://codecov.io/gh/andreax79/fs.gitfs
  Builds = https://github.com/andreax79/fs.gitfs/actions

[options]
zip_safe = true
include_package_data = true
python_requires = != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*
packages = fs.gitfs
test_suite = tests
setup_requires =
  setuptools >=38.3.0
install_requires =
  fs
  git-python
tests_require =
  coverage
  flake8
  mypy
  black
  twine
  pytest
  pytest-mock

[options.entry_points]
fs.opener =
  git = fs.gitfs.opener:GitOpener

[options.package_data]
fs.gitfs = VERSION

[coverage:report]
include = fs/*
show_missing = true
exclude_lines =
  pragma: no cover
  @abc.abstractmethod
  @abc.abstractproperty
  raise NotImplementedError
  return NotImplemented

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
match-dir = (?!tests)[^\.].*

[bdist_wheel]
universal=1

[flake8]
max-line-length=130
ignore: W503, E203, E731

[tool:pytest]
addopts = -ra -q
testpaths = tests
